# network-udp-no_std

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: channel.rs  lib.rs  main.rs
client/src/client/: session.rs
server/: Cargo.toml
server/src/: main.rs  service.rs
server/src/service/: session.rs  state.rs
server/src/service/session/: handler.rs
shared_lib/: Cargo.toml
shared_lib/src/: command.rs  error.rs  lib.rs  network.rs  serialize.rs
