[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "^0.8.0" }
libc-print = "^0.1.23"
musli = { version = "^0.0.126", default-features = false, features = [
    "serde",
    "storage",
] }
byteorder = { version = "^1.5", default-features = false }
thiserror = {version = "^2.0.11", default-features = false }